# TradeReady_BackEnd-

./: .cursorrules  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.celery  Dockerfile.ingestion  alembic.ini  backtesting_tasks.md  backtestingdevelopment.md  claude-code-starter-kit.rar  codereviewplan.md  codereviewtasks.md  commands.txt  context.md  db.txt  developmantPlan.md  developmentprogress.md  docker-compose.dev.yml  docker-compose.phase1.yml  docker-compose.yml  pgadmin-servers.json  pgpassfile  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt  skills-lock.json  tasks.md
.claude/: settings.json  settings.local.json
agent/: .env.example  CLAUDE.md  Dockerfile  __init__.py  __main__.py  cli.py  config.py  logging.py  logging_middleware.py  logging_writer.py  main.py  metrics.py  pyproject.toml  server.py  server_handlers.py  tasks.py
agent/conversation/: CLAUDE.md  __init__.py  context.py  history.py  router.py  session.py
agent/memory/: CLAUDE.md  __init__.py  postgres_store.py  redis_cache.py  retrieval.py  store.py
agent/models/: CLAUDE.md  __init__.py  analysis.py  ecosystem.py  report.py  trade_signal.py
agent/permissions/: CLAUDE.md  __init__.py  budget.py  capabilities.py  enforcement.py  roles.py
agent/prompts/: CLAUDE.md  __init__.py  skill_context.py  system.py
agent/strategies/: CLAUDE.md  __init__.py  checksum.py  drift.py  retrain.py  walk_forward.py
agent/strategies/ensemble/: CLAUDE.md  __init__.py  attribution.py  circuit_breaker.py  config.py  meta_learner.py  optimize_weights.py  run.py  signals.py  validate.py
agent/strategies/evolutionary/: CLAUDE.md  __init__.py  analyze.py  battle_runner.py  config.py  evolve.py  genome.py  operators.py  population.py
agent/strategies/regime/: CLAUDE.md  __init__.py  classifier.py  labeler.py  strategy_definitions.py  switcher.py  validate.py
agent/strategies/regime/models/: regime_classifier.joblib.sha256
agent/strategies/risk/: CLAUDE.md  __init__.py  middleware.py  recovery.py  risk_agent.py  sizing.py  veto.py
agent/strategies/rl/: CLAUDE.md  __init__.py  config.py  data_prep.py  deploy.py  evaluate.py  runner.py  train.py
agent/strategies/walk_forward_results/: regime_wf_report.json
agent/tests/: CLAUDE.md  test_attribution.py  test_battle_runner.py  test_circuit_breaker.py  test_config.py  test_drawdown_profiles.py  test_drift_detector.py  test_dynamic_weights.py  test_ensemble.py  test_ensemble_backtest_validation.py  test_ensemble_pipeline.py  test_evolutionary_fitness.py  test_genome.py  test_kelly_hybrid_sizing.py  test_logging.py  test_logging_middleware.py  test_logging_writer.py  test_memory_learning_loop.py  test_memory_retrieval.py  test_memory_store.py  test_meta_learner.py  test_models.py  test_operators.py  test_optimize_weights.py  test_pair_selector.py  test_recovery_manager.py  test_redis_memory_cache.py  test_regime.py  test_regime_labeler.py  test_regime_switcher.py  test_rest_tools.py  test_retrain.py  test_retrain_celery.py  test_risk_agent.py  test_risk_middleware.py  test_rl_config.py  test_rl_deploy.py  test_rl_pipeline.py  test_runner.py  test_sdk_tools.py  (+12 more)
agent/tools/: CLAUDE.md  __init__.py  agent_tools.py  mcp_tools.py  rest_tools.py  sdk_tools.py
agent/trading/: CLAUDE.md  __init__.py  ab_testing.py  execution.py  journal.py  loop.py  monitor.py  pair_selector.py  signal_generator.py  strategy_manager.py  ws_manager.py
agent/workflows/: CLAUDE.md  __init__.py  backtest_workflow.py  smoke_test.py  strategy_workflow.py  trading_workflow.py
alembic/: CLAUDE.md  env.py
claude-code-starter-kit/: .gitignore-additions.txt  README.md  SETUP-INSTRUCTIONS.md
development/: CLAUDE.md  Multiagentbattleplan.md  VAULT-SETUP.md  agent-activity-log.jsonl  agent-ecosystem-plan.md  agent-logging-plan.md  agent-logging-research.md  agent-memory-strategy-report.md  agent-trading-strategy-report.md  agentic-layer-plan-tasks.md  agentic-layer-visualization.html  agents-backtesting-battles-research.md  april-2026-execution-plan.md  backtest-bugfix-plan.md  backtesting_tasks.md  backtestingdevelopment.md  c-level-report-skill-plan.md  codereviewplan.md  codereviewtasks.md  context.md  data-pipeline-report.md  deployment-fix-plan.md  deployment-plan-v002.md  developmantPlan.md  developmentprogress.md  docs-plan-task.md  executive-summary.md  gap_fill_implementation_plan.md  implementation-plan-a-to-z.md  integration_tasks.md  market_data_gap_fill.md  multiagent_battle_tasks.md  multiagent_fix_tasks.md  obsidian-integration-plan.md  plan-1000-users-a-to-z.md  plan.md  platform-endgame-readiness-plan.md  platform-tools-report.md  qa-bugfix-plan.md  recommendations-execution-plan.md  (+9 more)
docs/: CLAUDE.md  (+14 more)
sdk/: CLAUDE.md  README.md  pyproject.toml
sdk/agentexchange/: __init__.py  async_client.py  client.py  exceptions.py  models.py  ws_client.py
sdk/examples/: basic_backtest.py  genetic_optimization.py  getting_started.py  rl_training.py  strategy_tester.py  webhook_integration.py
tradeready-gym/: CLAUDE.md  README.md  pyproject.toml
tradeready-gym/examples/: 01_random_agent.py  02_ppo_training.py  03_dqn_training.py  04_continuous_actions.py  05_portfolio_allocation.py  06_custom_reward.py  07_custom_observation.py  08_vectorized_training.py  09_evaluate_model.py  10_live_trading.py
tradeready-gym/tests/: test_composite_reward.py  test_configurable_fees.py  test_gymnasium_compliance.py  test_headless_env.py
tradeready-gym/tradeready_gym/: __init__.py
tradeready-gym/tradeready_gym/envs/: __init__.py  base_trading_env.py  headless_env.py  live_env.py  multi_asset_env.py  single_asset_env.py
tradeready-gym/tradeready_gym/rewards/: __init__.py  composite.py  custom_reward.py  drawdown_penalty_reward.py  pnl_reward.py  sharpe_reward.py  sortino_reward.py
tradeready-gym/tradeready_gym/spaces/: __init__.py  action_spaces.py  observation_builders.py
tradeready-gym/tradeready_gym/utils/: __init__.py  training_tracker.py
tradeready-gym/tradeready_gym/wrappers/: __init__.py  batch_step.py  feature_engineering.py  normalization.py
(+1186 files in other folders)
