[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentexchange"
version = "0.1.0"
description = "Universal Python SDK for the AgentExchange AI crypto trading platform"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "AgentExchange", email = "sdk@agentexchange.io" }]
keywords = ["crypto", "trading", "ai", "agents", "binance", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.28",
    "websockets>=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "mypy>=1.9",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://github.com/agentexchange/agentexchange"
Documentation = "https://docs.agentexchange.io"
Repository = "https://github.com/agentexchange/agentexchange"
"Bug Tracker" = "https://github.com/agentexchange/agentexchange/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentexchange*"]

[tool.setuptools.package-data]
agentexchange = ["py.typed"]

[tool.mypy]
strict = true
python_version = "3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "ANN"]
ignore = ["ANN101", "ANN102"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
