[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tradeready-gym"
version = "0.1.0"
description = "Gymnasium-compatible trading environments backed by the TradeReady backtest engine"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "TradeReady", email = "dev@tradeready.ai" }]

dependencies = [
    "gymnasium>=0.29",
    "numpy>=1.26",
    "httpx>=0.28",
]

[project.optional-dependencies]
sdk = ["tradeready-sdk"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.8",
]

[project.entry-points."gymnasium.envs"]
__root__ = "tradeready_gym:register_envs"

[tool.hatch.build.targets.wheel]
packages = ["tradeready_gym"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
